[package]
name = "prices"
version = "0.1.0"
authors = ["Vagios Vlachos <bagios234@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
select = "*"
scraper = "*"
tokio = "*"
prettytable-rs = "*"
# tui = { version = "0.13" }
tui = { git = "https://github.com/fdehau/tui-rs", branch = "master" }
termion = { version = "1" }